[package]
name = "lucien"
version = "0.1.0"
authors = ["knh190 <knh190@hotmail.com>"]
edition = "2018"

[workspace]
members = [
  "app",
  "core",
  "render",
  "ruwren",
]

[dependencies]
lucien_render = { path = "render" }
lucien_app    = { path = "app" }
lucien_core   = { path = "core" }
ruwren   = { path = "ruwren" }
# logger
slog = "2.7"
# error handle
anyhow = "*"
