[package]
name = "lucien_app"
version = "0.1.0"
authors = ["knh190 <knh190@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lucien_render = { path = "../render" }

iced = { version = "0.2.0", features = ["image", "tokio"] }
iced_futures = "0.2"
iced_native = "0.3"
iced_winit = "0.2"
iced_wgpu = "0.3"

anyhow = "*" # handle error
wgpu = "0.6.2"
