[package]
name = "lucien_core"
version = "0.1.0"
authors = ["knh190 <knh190@hotmail.com>"]
edition = "2018"

[dependencies]
# logger
slog = "2.7"
sloggers = "*"
# serialize
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# load resources
image = "0.23"
tobj = "2.0.4"

clap = "2.33" # cmd parser
dirs = "3.0" # relative dir convert

anyhow = "*"
