[package]
name = "lucien_vm"
version = "0.1.0"
authors = ["knh190 <knh190@hotmail.com>"]
edition = "2018"

[dependencies]
lucien_core = { path = "../core" }
lucien_render = { path = "../render" }
ruwren = { path = "../ruwren" }

slog = "2.7"
anyhow = "*"
glam = { version = "0.13", features = ["serde"] } # math
